[gd_scene load_steps=22 format=3 uid="uid://c6kfyd6p7yg8"]

[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://assets/characters/happy_boo/happy_boo.tscn" id="1_4flbx"]
[ext_resource type="Script" uid="uid://dtbpep536mrd5" path="res://scenes/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://bcvd8cqytws4b" path="res://assets/characters/vietnam_war2.png" id="2_dqkch"]
[ext_resource type="PackedScene" uid="uid://c2qumq6kmfyq8" path="res://scenes/gun.tscn" id="3_i3pqv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_dqkch")
region = Rect2(0, 99, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_dqkch")
region = Rect2(33, 99, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("2_dqkch")
region = Rect2(0, 66, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_dqkch")
region = Rect2(33, 66, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_dqkch")
region = Rect2(0, 0, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_dqkch")
region = Rect2(33, 0, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_dqkch")
region = Rect2(66, 0, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("2_dqkch")
region = Rect2(99, 0, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_dqkch")
region = Rect2(0, 33, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_dqkch")
region = Rect2(33, 33, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_dqkch")
region = Rect2(66, 33, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_dqkch")
region = Rect2(99, 33, 32, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_jej6c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": false,
"name": &"Hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i3pqv"]
radius = 41.0
height = 108.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hqtel"]
radius = 41.5
height = 108.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3pqv"]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqtel"]
bg_color = Color(0.304123, 0.70572, 0.170485, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 5
platform_floor_layers = 4294967040
script = ExtResource("1_onrkg")

[node name="SoldierSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.999992, -2)
scale = Vector2(4.5, 4.049)
sprite_frames = SubResource("SpriteFrames_jej6c")
animation = &"Run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_i3pqv")

[node name="Gun" parent="." instance=ExtResource("3_i3pqv")]
position = Vector2(-2.38419e-07, 39)
rotation = -0.00417785

[node name="HappyBoo" parent="." instance=ExtResource("1_4flbx")]
unique_name_in_owner = true
visible = false

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_hqtel")
debug_color = Color(0.964561, 6.73831e-07, 0.492012, 0.42)

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -57.0
offset_top = -124.0
offset_right = 59.0
offset_bottom = -101.0
rotation = -0.000635765
theme_override_styles/background = SubResource("StyleBoxFlat_i3pqv")
theme_override_styles/fill = SubResource("StyleBoxFlat_hqtel")
value = 100.0
show_percentage = false

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
